--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-proxy-starter",
-  "version": "1.1.0",
+  "version": "2.1.0",
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
@@ -14,6 +14,8 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.24.4",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "dotenv": "^5.0.1",
