--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webpack-proxy-starter",
-  "version": "2.1.1",
+  "name": "webpack-monolithic-backend-proxy-starter",
+  "version": "2.2.1",
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
@@ -12,15 +12,24 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "dotenv": "^5.0.1",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "flow-bin": "^0.73.0",
+    "flow-webpack-plugin": "^1.2.0",
     "image-webpack-loader": "^4.2.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
